--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
 
   google_fonts: ^4.0.4
-
+  firebase_auth: ^4.5.0
+  firebase_core: ^2.11.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
