--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   google_fonts: ^4.0.4
   firebase_auth: ^4.5.0
   firebase_core: ^2.11.0
+  firebase_ui_database: ^1.2.0
+  firebase_database: ^10.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
