--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   firebase_ui_database: ^1.2.0
   firebase_database: ^10.1.2
   http: ^0.13.6
+  loading_animation_widget: ^1.2.0
+  shared_preferences: ^2.1.1
+  provider: ^6.0.5
+  dio: ^5.1.2
+  go_router: ^7.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
