--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,13 @@ dependencies:
     sdk: flutter
 
   google_fonts: ^4.0.4
-  firebase_auth: ^4.5.0
-  firebase_core: ^2.11.0
-  firebase_ui_database: ^1.2.0
-  firebase_database: ^10.1.2
   http: ^0.13.6
   loading_animation_widget: ^1.2.0
   shared_preferences: ^2.1.1
   provider: ^6.0.5
   dio: ^5.1.2
   go_router: ^7.1.1
+  table_calendar: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
